--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,10 @@
+body{
+  padding: 0;
+  margin: 0;
+  background-color: red;
+  width: 100%;
+  height: 100%;
+}
 .App {
   /* position: absolute; */
   /* padding: 0; */
