--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,36 +1,34 @@
 body{
-  padding: 0;
-  margin: 0;
-  background-color: red;
-  width: 100%;
-  height: 100%;
+  background-image: url(../assets/pattern-background-desktop.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color:#e0e8ff ;
 }
 .App {
-  /* position: absolute; */
-  /* padding: 0; */
+  
   height: 100%;
-  background-color: #e0e8ff;
+  width: 100vw;
+  /* background-color: #e0e8ff; */
   text-align: center;
 }
 .solely {
-  position: relative;
- bottom: 30vh;
-
+  /* position: relative; */
+  /* bottom: 30vh; */
+  /* border: solid; */
   text-align: center;
   display: flex;
   justify-content: center;
-
 }
 .summary {
+  top: 50px;
   width: 400px;
-  margin-top: -24px;
-border-radius: 0px 0px 8px 8px;
+  /* margin-top: -24px; */
+  border-radius: 8px;
   background-color: white;
-  height: 600px;
-
+  /* height: 600px; */
 }
 
-.bcn{
+.bcn {
   padding-top: 20px;
 }
 .btn {
@@ -41,10 +39,10 @@ border-radius: 0px 0px 8px 8px;
   border-radius: 8px;
   border: none;
 }
-.bnn{
+.bnn {
   width: 250px;
   height: 45px;
-  background-color:  rgb(219, 218, 248); 
+  background-color: rgb(219, 218, 248);
   /* padding-top: 20px; */
   /* color: white; */
   border-radius: 8px;
@@ -73,33 +71,32 @@ border-radius: 0px 0px 8px 8px;
 :hover.a {
   padding-top: 10px;
   text-decoration: underline;
-  color: blue;
   font-size: 18px;
 }
-.a{
+.a {
   padding-top: 10px;
   text-decoration: underline;
+  font-weight: 600;
+  color: blue;
 }
 .butn {
   padding-top: 20px;
 }
- @media (max-width: 500px) {
-  .solely{
+@media (max-width: 500px) {
+  .solely {
     bottom: 0;
     top: -5px;
-    margin:auto
+    /* margin:auto */
   }
-  .App{
+  .App {
     bottom: 20px;
-    
   }
-  
- }
- @media (max-width:900px) {
-  .solely{
+}
+@media (max-width: 900px) {
+  .solely {
     bottom: 70px;
   }
-  .App{
+  .App {
     height: 100%;
   }
- }
+}
